<?xml version="1.0" encoding="utf-8"?>
<menu
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
>

    <item
            app:icon="@drawable/ic_local_play_black_24dp"
            android:id="@+id/all_movies"
            android:title="@string/movies"/>

    <item
            app:icon="@drawable/ic_local_play_black_24dp"
            android:id="@+id/popular_movies"
            android:title="@string/popular_movies"/>

    <item
            app:icon="@drawable/ic_local_play_black_24dp"
            android:id="@+id/playing_movies"
            android:title="@string/playing_movies"/>

    <item
            app:icon="@drawable/ic_local_play_black_24dp"
            android:id="@+id/top_rated_movies"
            android:title="@string/rated_movies"/>
    <item
            app:icon="@drawable/ic_local_play_black_24dp"
            android:id="@+id/my_favorite_movies"
            android:title="@string/fav_movies"/>



</menu>